Update settings according to Artemis